2002-02-01  Braden McDaniel  <braden@endoframe.com>

        * Refactored code to check for self-references when assigning to
          fields of a Script node into methods on "ScriptNode".

2002-01-31  Braden McDaniel  <braden@endoframe.com>

        * Minor fix to JDK/JNI autoconf macro: just check for the
          "client" libjvm, not "classic".

        * Provide meta-data files for pkg-config instead of providing
          our own dodgy autoconf macros. Client apps should use the
          pkg-config autoconf macro PKG_CHECK_MODULES to check for the
          presence/location of OpenVRML.

        * Updated AC_INIT usage for autoconf 2.52.

        * Require automake 1.5. (Do it right this time.)

        * Autoconf insists that AC_INIT be the very first thing.

        * Added virtual "assign" method on FieldValue.

2002-01-28  S. K. Bose  <bose@pavan.barc.ernet.in>

        * In "NodeLOD", accumulated modelview matrix within 
          rendercontext is used to find the viewer position in local
          coordinate system.

        * Fixed the "step" method in ViewerOpenGL to take care the "Z"
          values.

        * "getPosition" method is removed from ViewerOpenGL. This is
          no longer needed.
 
2002-01-25  Thomas Flynn <tflynn@users.sourceforge.net>

        * Update OpenVRML autoconf macros to use namespaces.

2002-01-22  Braden McDaniel  <braden@endoframe.com>

        * Fixed "ScriptJDK.cpp" to account for identifier changes to
          FieldValue::Type.

        * Fixed some errors introduced through unduly aggressive use of
          "find & replace".

2002-01-22  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Implement three more methods (det3, det4 and getTransform) in
          VrmlMatrix.

        * In ProximitySensor, getPosition and getOrientation are
          replaced by getTransform method of VrmlMatrix to find
          out position and orientation of Viewer w.r.t local coordinate