@@ -3,6 +3,12 @@
         * Refactored code to check for self-references when assigning to
           fields of a Script node into methods on "ScriptNode".
 
+        * Made "assignWithSelfRefCheck" methods on "ScriptNode" private.
+
+        * Modified JavaScript binding code to use "ScriptNode::setField"
+          (and thus "assignWithSelfRefCheck") when setting fields of the
+          Script node.
+
 2002-01-31  Braden McDaniel  <braden@endoframe.com>
 
         * Minor fix to JDK/JNI autoconf macro: just check for the
